--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "MrX WhatsApp Assistant",
+  "name": " ♬ ＭＵＳＩＣ ＢＯＴ ➹",
   "description": "whatsapp md bot build with nodejs",
   "repository": "https://github.com/generalwebsitex1/MrX-WhatsApp-Assistant",
   "logo": "http://tiny.cc/mylogo",
