--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
- "name": "MrX WhatsApp Assistant",
- "description": "Multi Device Whatsapp Assistant by MrX",
+ "name": "ＭＵＳＩＣ ",
+ "description": "Multi Device Whatsapp Assistant by MUSIC",
  "version": "3.0.0",
  "main": "index.js",
  "type": "commonjs",
